<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/ll_dialog_exit_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="left"
            android:padding="8dp"
            android:text="@string/exit_app"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/roboto_regular" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_dialog_exit_confirm_deny"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_16"

                android:fontFamily="@font/roboto_regular"/>

            <TextView
                android:id="@+id/btn_dialog_exit_confirm_accept"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textSize="@dimen/text_size_16"
                android:fontFamily="@font/roboto_regular" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>