<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/rlPhoneEnter"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="-2dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/sign_in_enter_phone"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/rlPhoneEnter"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in_your_phone"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/rlPhoneEnter"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_sign_in">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/sign_in_enter_phone_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivNext"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:padding="5dp"
                android:rotation="180"
                android:src="@drawable/ic_arrow_back"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>