<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_20"
            android:src="@drawable/ic_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_20"
            android:text="@string/sign_in_camera"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="@id/ivCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivCamera"
            app:layout_constraintTop_toTopOf="@id/ivCamera" />

        <ImageView
            android:id="@+id/ivGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_15"
            android:src="@drawable/ic_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCamera" />

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_20"
            android:text="@string/sign_in_gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="@id/ivGallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivGallery"
            app:layout_constraintTop_toTopOf="@id/ivGallery" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_19"
            android:background="#33979797"
            app:layout_constraintTop_toBottomOf="@id/ivGallery" />

        <TextView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="@dimen/margin_25"
            android:paddingVertical="@dimen/margin_18"
            android:text="@string/cancel2"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>